
** Fix bugs in Linux kernel module device elements: avoid dereferencing
   null devices, and be careful about device reference counts for Linux
   2.4.

** Bug fixes to IPRewriter, TCPRewriter, Switch, PullSwitch, ....

** Added functionality to ControlSocket, RED, FromLinux, FromDump, ....

** Add SetPacketType, IPLookupRadix, ....

* Internal

** The format of `elements.conf' files has changed.

** The header files for ScheduleInfo, AddressInfo, AlignmentInfo, Error,
   and DriverManager are stored in `C<include/click/standard>'. This makes
   it simpler to distribute a self-contained Click library.

** Bug fix: Elements are uninitialized and destroyed in the reverse order
   from which they were initialized. Reported by Kyle Jamieson
   <jamieson@mit.edu>.

** Made most Click configuration tests into Autoconf macros.

** Check for byte order, and provide CLICK_BYTE_ORDER configuration
   constant.

** Add Packet::tcp_header() and Packet::udp_header() convenience functions.


Version 1.2.1   26.Jun.2001

* General

** Added preliminary support for Linux 2.4! The patch is in
   etc/linux-2.4.4-patch; it also applies to Linux 2.4.5. Click can receive
   and send packets, and there is preliminary support for polling, as well.
   We will be improving Linux 2.4's stability with time. Thanks to Nickolai
   B. Zeldovich.

** Many bug fixes, particularly to ARPResponder, ToLinux, LookupIPRoute,
   cp_unparse_real2, cpArguments.

** Updated etc/samplepackage to bring it up to date. It is a good starting
   point for building your own package.

* Elements

** In the kernel, FromDevice, PollDevice, and ToDevice watch for
   notifications when devices go up or down. Now you can remove a device
   that the Click configuration refers to; the relevant element will simply
   stop pushing or pulling packets. If you add the device back again, the
   relevant element will seamlessly attach to it. Also added the
   `ALLOW_NONEXISTENT' keyword argument to these elements.
