@@ -188,4 +188,4 @@ LookupIPRouteLinux::push(int, Packet *p)
 }
 
 ELEMENT_REQUIRES(userlevel|linuxmodule)
-EXPORT_ELEMENT(LookupIPRouteLinux)
+EXPORT_ELEMENT(LookupIPRouteLinux LinuxIPLookup=LookupIPRouteLinux)
